tests/method_properties/method_properties.exp
Error: test.js:5
  5:   qux() { this.constructor.x; }
                                ^ Cannot get `this.constructor.x` because property `x` is missing in statics of `C` [1].
  References:
    1: class C {
             ^ [1]: statics of `C`

Error: test.js:7
  7: C.x;
       ^ Cannot get `C.x` because property `x` is missing in statics of `C` [1].
  References:
    1: class C {
             ^ [1]: statics of `C`

Error: test.js:13
 13: (foo.bar(): string); // error, could be undefined
      ^^^^^^^^^ call of method `bar`. Function cannot be called on possibly undefined value
 13: (foo.bar(): string); // error, could be undefined
      ^^^^^^^ undefined

Error: test.js:16
 16:   (x.bar(): string); // error. caused by `f(foo)`; annotate x to track it down.
        ^^^^^^^ call of method `bar`. Function cannot be called on possibly undefined value
 16:   (x.bar(): string); // error. caused by `f(foo)`; annotate x to track it down.
        ^^^^^ undefined


Found 4 errors
